用户管理模块测试用例

--- a/docs/03-技术栈选择.md
+++ b/docs/03-技术栈选择.md
@@ -37,12 +37,14 @@
 - ✅ **权限控制**: 支持角色权限管理
 - ✅ **学习价值**: 企业级安全解决方案
 
-#### 🗄️ 数据访问：Spring Data JPA
+#### 🗄️ 数据访问：MyBatis-Plus 3.5+
 **选择理由**:
-- ✅ **开发效率**: 自动生成CRUD操作
-- ✅ **类型安全**: 编译时检查
-- ✅ **查询灵活**: 支持自定义查询
-- ✅ **事务管理**: 声明式事务支持
+- ✅ **SQL控制灵活**: 支持复杂SQL和性能优化
+- ✅ **学习成本低**: MyBatis基础上的增强，易于掌握
+- ✅ **通用CRUD**: 自动生成基础增删改查操作
+- ✅ **条件构造器**: 类型安全的动态SQL构建
+- ✅ **分页插件**: 内置分页支持，性能优秀
+- ✅ **代码生成**: 支持自动生成实体类和Mapper
 
 #### 📡 消息通信：Eclipse Paho MQTT
 **选择理由**:
