授权管理模块1.0.0

--- a/docs/04-数据库设计.md
+++ b/docs/04-数据库设计.md
@@ -8,15 +8,17 @@
 
 ### 表: users (用户表)
 
+**注意**：根据最新业务需求，用户表字段约束已调整，真实姓名和手机号现为必填字段，邮箱为可选字段。
+
 | 列名 | 数据类型 | 约束 | 说明 |
 |------|----------|------|------|
 | id | BIGSERIAL | PRIMARY KEY | 用户唯一标识，自增主键 |
 | username | VARCHAR(50) | UNIQUE, NOT NULL | 用户名，用于登录 |
 | password_hash | VARCHAR(255) | NOT NULL | 加密后的密码 |
-| email | VARCHAR(100) | UNIQUE, NOT NULL | 用户邮箱 |
+| email | VARCHAR(100) | UNIQUE | 用户邮箱（可选，如提供需唯一） |
 | role | VARCHAR(20) | NOT NULL DEFAULT 'USER' | 用户角色：USER（农户）, ADMIN（管理员） |
-| full_name | VARCHAR(100) | | 用户全名 |
-| phone_number | VARCHAR(20) | | 手机号码 |
+| full_name | VARCHAR(100) | NOT NULL | 用户全名（必填） |
+| phone_number | VARCHAR(20) | UNIQUE, NOT NULL | 手机号码（必填，需唯一） |
 | created_at | TIMESTAMPTZ | NOT NULL DEFAULT NOW() | 账户创建时间 |
 | updated_at | TIMESTAMPTZ | NOT NULL DEFAULT NOW() | 最后更新时间 |
 
